Fixed bug with wrapping not returned new block ids

--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -133,7 +133,7 @@
   }
 
   + .container-block {
-    margin-top: 20px;
+    //margin-top: 20px;
   }
 
   &:hover {
